syntax = "proto3";

package protobuf;
import "actor.proto";

option php_namespace = "PhluxorSaga\\ProtoBuf";
option php_metadata_namespace = "PhluxorSaga\\Metadata\\ProtoBuf";

message TransferFailed {
  string reason = 1;
}

message StatusUnknown {}

message TransferStarted {}

message AccountDebited {}

message EscalateTransfer {
  string reason = 1;
}

message FailedAndInconsistent {
  actor.Pid from = 1;
}

message FailedButConsistentResult {
  actor.Pid from = 1;
}

message SuccessResult {
  actor.Pid from = 1;
}

message DebitRolledBack {}

message CreditRefused {}

message AccountCredited {}

message TransferCompleted {
  actor.Pid from = 1;
  float from_balance = 2;
  actor.Pid to = 3;
  float to_balance = 4;
}
